--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -8,4 +8,15 @@ add_executable(${PROJECT_NAME}
         main.cpp)
 
 target_link_libraries(${PROJECT_NAME}
-        ${PROJECT_NAME}_lib)
+        ${PROJECT_NAME}_lib
+        ${OPENGL_gl_LIBRARY})
+
+if (MSVC)
+    target_compile_options(${PROJECT_NAME}
+            PRIVATE /W4 /WX)
+    target_compile_definitions(${PROJECT_NAME}
+            PRIVATE _CRT_SECURE_NO_WARNINGS)
+else ()
+    target_compile_options(${PROJECT_NAME}
+            PRIVATE -Wall -Wextra -pedantic -Werror -Wno-missing-field-initializers)
+endif ()
